--- a/data/projects.json
+++ b/data/projects.json
@@ -27,7 +27,7 @@
             "url": ""
         },
         "description": "Learning Management System",
-        "languagesIcon": ["javascript.svg", "/react.svg", "/tailwindcss.svg", "/shadcnui.svg", "/jsonwebtokens.svg", "/nodedotjs.svg", "/express.svg", "/mongoose.svg", "/postman.svg", "/cloudinary.svg", "/mongodb.svg"]
+        "languagesIcon": ["javascript.svg", "/react.svg", "/tailwindcss.svg", "/shadcnui.svg", "/jwt-3.svg", "/nodedotjs.svg", "/express.svg", "/mongoose.svg", "/postman.svg", "/cloudinary.svg", "/mongodb.svg", "/stripe.svg"]
     },
     {
         "thumbnail": "",
@@ -37,6 +37,6 @@
             "url": ""
         },
         "description": "SaaS Website",
-        "languagesIcon": ["typescript.svg", "/nextdotjs.svg", "/tailwindcss.svg", "/shadcnui.svg", "/jsonwebtokens.svg", "/nodedotjs.svg", "/express.svg", "/mongoose.svg", "/postman.svg", "/cloudinary.svg", "/mongodb.svg"]
+        "languagesIcon": ["typescript.svg", "/nextdotjs.svg", "/tailwindcss.svg", "/shadcnui.svg", "/jwt-3.svg", "/nodedotjs.svg", "/express.svg", "/mongoose.svg", "/postman.svg", "/cloudinary.svg", "/mongodb.svg"]
     }
 ]
